# python-project-52

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: linter-check.yml
fixtures/: labels.json  statuses.json  tasks.json  users.json
task_manager/: mixins.py  rollbar_middleware.py  settings.py  urls.py  views.py
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_alter_label_name.py
task_manager/locale/en/LC_MESSAGES/: django.mo  (+1 more)
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_name.py
task_manager/tasks/: filter.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_initial.py
task_manager/templates/: base.html  index.html  index_default.html  login.html
task_manager/templates/labels/: label_create.html  label_delete.html  label_update.html  labels_index.html
task_manager/templates/statuses/: status_create.html  status_delete.html  status_update.html  statuses_index.html
task_manager/templates/tasks/: task_create.html  task_delete.html  task_detail.html  task_update.html  tasks_index.html
task_manager/templates/users/: user_create.html  user_delete.html  user_update.html  users_index.html
task_manager/users/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py  0002_alter_user_options.py
