[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Sergey Chapurin <goodwin7@list.ru>"]
readme = "README.md"
packages = [
  { include = "task_manager" },
]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1"
django-admin = "^2.0.2"
python-dotenv = "^0.13.0"
gunicorn = "^23.0.0"
django-bootstrap5 = "^24.2"
dj-database-url = "^2.2.0"
django-filter = "^24.3"
rollbar = "^0.16.3"
coverage = "^7.6.1"
psycopg2-binary = "^2.9.9"
docker = "^7.1.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
